--- a/CUDA/Dockerfile
+++ b/CUDA/Dockerfile
@@ -38,7 +38,7 @@ RUN wget -q https://github.com/conda-forge/miniforge/releases/latest/download/Ma
 ENV PATH /root/mambaforge/bin:$PATH
 
 # Python Env Commands: ray + pytorch1.13
-RUN /bin/bash -c "source $HOME/mambaforge/etc/profile.d/conda.sh && mamba install -y install pytorch==1.13.1 torchvision==0.14.1 torchaudio==0.13.1 pytorch-cuda=11.7 -c pytorch -c nvidia && pip install tensorboard"
+RUN /bin/bash -c "source $HOME/mambaforge/etc/profile.d/conda.sh && mamba install -y pytorch==1.13.1 torchvision==0.14.1 torchaudio==0.13.1 pytorch-cuda=11.7 -c pytorch -c nvidia && pip install tensorboard"
 RUN /bin/bash -c "source $HOME/mambaforge/etc/profile.d/conda.sh && pip install 'ray[all]'"
 
 # # Setting Properties
