[New] Finished CUDA Base; RL CUDA Development

--- a/rl_cuda/Dockerfile
+++ b/rl_cuda/Dockerfile
@@ -1,7 +1,7 @@
 FROM spacegoing/cudabase:latest
 
 # Set the maintainer: spacegoing/cuda_rl:latest
-LABEL maintainer="spacegoing@July 2 2023"
+LABEL maintainer="spacegoing@July 3 2023"
 
 # Python packages
 RUN /bin/bash -c "source $HOME/mambaforge/etc/profile.d/conda.sh && \
@@ -12,7 +12,8 @@ RUN /bin/bash -c "source $HOME/mambaforge/etc/profile.d/conda.sh && \
 RUN mkdir -p /root/bin && echo 'export PATH="$PATH:/root/bin"' >> ~/.bashrc
 
 # bash init_container.sh when first login to container
-COPY init_script.sh /root/myCodeLab/init_script.sh
-RUN chmod +x /root/myCodeLab/init_script.sh
+COPY init_script_v1.sh /root/myCodeLab/init_script_v1.sh
+RUN chmod +x /root/myCodeLab/init_script_v1.sh
 
+# docker build -t spacegoing/rl_cuda:latest .
 WORKDIR /root/myCodeLab
