--- a/rl_cuda/Dockerfile
+++ b/rl_cuda/Dockerfile
@@ -1,7 +1,7 @@
 FROM spacegoing/cudabase:latest
 
 # Set the maintainer: spacegoing/cuda_rl:latest
-LABEL maintainer="spacegoing@July 3 2023"
+LABEL maintainer="spacegoing@July 2 2023"
 
 # Python packages
 RUN /bin/bash -c "source $HOME/mambaforge/etc/profile.d/conda.sh && \
@@ -12,4 +12,5 @@ RUN /bin/bash -c "source $HOME/mambaforge/etc/profile.d/conda.sh && \
 RUN mkdir -p /root/bin && echo 'export PATH="$PATH:/root/bin"' >> ~/.bashrc
 
 # docker build -t spacegoing/rl_cuda:latest .
+# docker run --gpus all -it --rm -v $(pwd)/host/test:/root/myCodeLab/test spacegoing/rl_cuda:latest bash
 WORKDIR /root/myCodeLab
