[New] draft freeze installed

--- a/CUDA/Dockerfile
+++ b/CUDA/Dockerfile
@@ -28,6 +28,11 @@ RUN git clone https://github.com/syl20bnr/spacemacs ~/.emacs.d && \
     ln -s /root/myCodeLab/GitConfig/spacemacs/.spacemacs.clean /root/myCodeLab/GitConfig/spacemacs/init.el
 # Run Spacemacs in daemon mode and then kill it. This will cause it to install layers.
 RUN emacs --daemon && emacsclient -e '(kill-emacs)'
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends ispell
+# For emacs 28.2, fix org mode errors
+RUN cd ~/.emacs.d; rm -rf elpa/develop/org-9* && \
+    emacs --daemon && emacsclient -e '(kill-emacs)' && \
+    echo "export TERM=xterm-256color" >> ~/.bashrc
 
 # Install Mambaforge
 RUN wget -q https://github.com/conda-forge/miniforge/releases/latest/download/Mambaforge-Linux-x86_64.sh && \
@@ -40,22 +45,17 @@ ENV PATH /root/mambaforge/bin:$PATH
 # Python Env Commands: ray + pytorch1.13
 # pytorch 1.13: https://pytorch.org/get-started/previous-versions/
 # https://github.com/pytorch/pytorch/wiki/PyTorch-Versions
-RUN /bin/bash -c "source $HOME/mambaforge/etc/profile.d/conda.sh && mamba install -y pytorch==1.13.1 torchvision==0.14.1 torchaudio==0.13.1 pytorch-cuda=11.7 -c pytorch -c nvidia && pip install tensorboard"
 RUN /bin/bash -c "source $HOME/mambaforge/etc/profile.d/conda.sh && mamba install -c conda-forge 'ray-all'"
+RUN /bin/bash -c "source $HOME/mambaforge/etc/profile.d/conda.sh && mamba install -y --freeze-installed pytorch==1.13.1 torchvision==0.14.1 torchaudio==0.13.1 pytorch-cuda=11.7 -c pytorch -c nvidia"
+RUN /bin/bash -c "source $HOME/mambaforge/etc/profile.d/conda.sh && mamba install -y --freeze-installed tensorboard"
 
 # # Setting Properties
 # Configure Git
 RUN git config --global user.name "spacegoing" && \
     git config --global user.email "spacegoing@gmail.com"
 
-# Config Spacemacs: LSP, Fix Org Error, Term Display
+# Config Spacemacs: LSP
 RUN /bin/bash -c "source $HOME/mambaforge/etc/profile.d/conda.sh && pip install Ipython python-lsp-server[all] importmagic epc"
-RUN DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends ispell && \
-    # For emacs 28.2, fix org mode errors
-    cd ~/.emacs.d; rm -rf elpa/develop/org-9* && \
-    emacs --daemon && emacsclient -e '(kill-emacs)' && \
-    # For emacs 28.2, fix org mode errors
-    echo "export TERM=xterm-256color" >> ~/.bashrc
 
 # Initialize mamba in your shell.
 RUN /bin/bash -c "source $HOME/mambaforge/etc/profile.d/conda.sh && mamba init"
